# zenith-router

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  ROUTER_CONTRACT.md  contract-scan.mjs  dependency_contract.spec.js  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  template-contract.spec.js  template.js  tsconfig.json
scripts/: release.ts
src/: events.js  history.js  index.js  index.ts  lib.rs  manifest.rs  manifest.ts  match.js  navigate.js  render.rs  resolve.rs  router.js  runtime.ts  runtime_gen.rs  types.rs  types.ts
src/navigation/: ZenLink.zen  index.ts  zen-link.ts
tests/: browser-integration.spec.js  contract-guard.spec.js  events.spec.js  history.spec.js  integration.spec.js  match.spec.js  navigate.spec.js  playwright-validation.mjs
tests/fixtures/: router-template.golden.js
