[package]
edition = "2021"
name = "zenith_router"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default dependencies for napi-rs
napi = { version = "2.12.2", default-features = false, features = ["napi3", "serde-json"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.7"

[build-dependencies]
napi-build = "2.0.1"
